feat: ajuste lógica componentes
- adicionado dialog no location
- atualizado api spec
